-- Up to you — schema overview (keys only)
-- Generated by docs/diagrams/er_schema.py from pg_dump. Do not edit.
CREATE TABLE alembic_version (
    version_num character varying(32) NOT NULL,
    PRIMARY KEY (version_num)
);
CREATE TABLE brand_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE brand_registration (
    publication_id bigint NOT NULL,
    company_name text NOT NULL,
    brand_name text NOT NULL,
    PRIMARY KEY (publication_id, company_name, brand_name),
    FOREIGN KEY (publication_id) REFERENCES brand_publication(id)
);
CREATE TABLE business_status_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE business_status_row (
    publication_id bigint NOT NULL,
    business_no text NOT NULL,
    name_raw text NOT NULL,
    status text NOT NULL,
    PRIMARY KEY (publication_id, business_no, name_raw, status),
    FOREIGN KEY (publication_id) REFERENCES business_status_publication(id)
);
CREATE TABLE business_tax_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE business_tax_row (
    publication_id bigint NOT NULL,
    business_no text NOT NULL,
    PRIMARY KEY (publication_id, business_no),
    FOREIGN KEY (publication_id) REFERENCES business_tax_publication(id)
);
CREATE TABLE circle (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE device_secret (
    id bigint NOT NULL,
    principal_id bigint NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (principal_id) REFERENCES principal(id)
);
CREATE TABLE example_embedding (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE forecast_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE forecast_reading (
    publication_id bigint NOT NULL,
    element text NOT NULL,
    slot_start timestamp with time zone NOT NULL,
    measure text NOT NULL,
    township_code text NOT NULL,
    PRIMARY KEY (publication_id, township_code, element, measure, slot_start),
    FOREIGN KEY (publication_id) REFERENCES forecast_publication(id)
);
CREATE TABLE ingest_run (
    id bigint NOT NULL,
    forecast_publication_id bigint,
    observation_publication_id bigint,
    place_publication_id bigint,
    brand_publication_id bigint,
    storefront_publication_id bigint,
    business_status_publication_id bigint,
    business_tax_publication_id bigint,
    PRIMARY KEY (id),
    FOREIGN KEY (brand_publication_id) REFERENCES brand_publication(id),
    FOREIGN KEY (business_status_publication_id) REFERENCES business_status_publication(id),
    FOREIGN KEY (business_tax_publication_id) REFERENCES business_tax_publication(id),
    FOREIGN KEY (storefront_publication_id) REFERENCES storefront_publication(id),
    FOREIGN KEY (forecast_publication_id) REFERENCES forecast_publication(id),
    FOREIGN KEY (observation_publication_id) REFERENCES observation_publication(id),
    FOREIGN KEY (place_publication_id) REFERENCES place_publication(id)
);
CREATE TABLE join_ticket (
    id bigint NOT NULL,
    circle_id bigint NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id)
);
CREATE TABLE member (
    id bigint NOT NULL,
    principal_id bigint NOT NULL,
    circle_id bigint NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id),
    FOREIGN KEY (principal_id) REFERENCES principal(id)
);
CREATE TABLE member_roll (
    id bigint NOT NULL,
    round_id bigint NOT NULL,
    circle_id bigint NOT NULL,
    member_id bigint NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id, member_id) REFERENCES member(circle_id, id),
    FOREIGN KEY (circle_id, round_id) REFERENCES round(circle_id, id)
);
CREATE TABLE metric_history (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE observation_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE observation_reading (
    publication_id bigint NOT NULL,
    station_id text NOT NULL,
    observed_at timestamp with time zone NOT NULL,
    element text NOT NULL,
    PRIMARY KEY (publication_id, station_id, element, observed_at),
    FOREIGN KEY (publication_id) REFERENCES observation_publication(id)
);
CREATE TABLE place (
    id bigint NOT NULL,
    circle_id bigint,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id)
);
CREATE TABLE place_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE preference (
    id bigint NOT NULL,
    member_id bigint NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (member_id) REFERENCES member(id)
);
CREATE TABLE principal (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE product_material (
    publication_id bigint NOT NULL,
    company_name text NOT NULL,
    brand_name text NOT NULL,
    product_name text NOT NULL,
    material_name text NOT NULL,
    PRIMARY KEY (publication_id, company_name, brand_name, product_name, material_name),
    FOREIGN KEY (publication_id) REFERENCES brand_publication(id)
);
CREATE TABLE proposal (
    id bigint NOT NULL,
    round_id bigint NOT NULL,
    place_id bigint NOT NULL,
    member_id bigint,
    PRIMARY KEY (id),
    FOREIGN KEY (member_id) REFERENCES member(id),
    FOREIGN KEY (place_id) REFERENCES place(id),
    FOREIGN KEY (round_id) REFERENCES round(id)
);
CREATE TABLE reference_place (
    publication_id bigint NOT NULL,
    registry_no text NOT NULL,
    township_code text,
    PRIMARY KEY (publication_id, registry_no),
    FOREIGN KEY (publication_id) REFERENCES place_publication(id),
    FOREIGN KEY (township_code) REFERENCES township_station(township_code)
);
CREATE TABLE round (
    id bigint NOT NULL,
    circle_id bigint NOT NULL,
    winning_place_id bigint,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id),
    FOREIGN KEY (winning_place_id) REFERENCES place(id)
);
CREATE TABLE round_forecast_baseline (
    round_id bigint NOT NULL,
    publication_id bigint NOT NULL,
    township_code text NOT NULL,
    element text NOT NULL,
    measure text NOT NULL,
    slot_start timestamp with time zone NOT NULL,
    PRIMARY KEY (round_id),
    FOREIGN KEY (publication_id, township_code, element, measure, slot_start) REFERENCES forecast_reading(publication_id, township_code, element, measure, slot_start),
    FOREIGN KEY (round_id) REFERENCES round(id)
);
CREATE TABLE search_alias (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE storefront_name (
    publication_id bigint NOT NULL,
    registry_no text NOT NULL,
    PRIMARY KEY (publication_id, registry_no),
    FOREIGN KEY (publication_id) REFERENCES storefront_publication(id)
);
CREATE TABLE storefront_publication (
    id bigint NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE township_station (
    township_code text NOT NULL,
    PRIMARY KEY (township_code)
);
CREATE TABLE trip (
    id bigint NOT NULL,
    round_id bigint NOT NULL,
    circle_id bigint NOT NULL,
    member_id bigint NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id, member_id) REFERENCES member(circle_id, id),
    FOREIGN KEY (circle_id, round_id) REFERENCES round(circle_id, id)
);
CREATE TABLE weight_contribution (
    id bigint NOT NULL,
    round_id bigint NOT NULL,
    place_id bigint NOT NULL,
    member_id bigint,
    forecast_publication_id bigint,
    forecast_township_code text,
    forecast_element text,
    forecast_measure text,
    forecast_slot_start timestamp with time zone,
    observation_publication_id bigint,
    observation_station_id text,
    observation_element text,
    observation_observed_at timestamp with time zone,
    preference_id bigint,
    trip_id bigint,
    brand_publication_id bigint,
    PRIMARY KEY (id),
    FOREIGN KEY (brand_publication_id) REFERENCES brand_publication(id),
    FOREIGN KEY (forecast_publication_id, forecast_township_code, forecast_element, forecast_measure, forecast_slot_start) REFERENCES forecast_reading(publication_id, township_code, element, measure, slot_start),
    FOREIGN KEY (member_id) REFERENCES member(id),
    FOREIGN KEY (observation_publication_id, observation_station_id, observation_element, observation_observed_at) REFERENCES observation_reading(publication_id, station_id, element, observed_at),
    FOREIGN KEY (round_id, place_id) REFERENCES proposal(round_id, place_id),
    FOREIGN KEY (preference_id) REFERENCES preference(id),
    FOREIGN KEY (trip_id) REFERENCES trip(id)
);
